@@ -1,3 +1,9 @@
+2013-07-08  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* operation/company_detail.php
+	  operation/contacts/contact_detail.php
+	  operation/leads/lead_detail.php: Fixed pagination.
+
 2013-07-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/functions_crm.php: Fixed the functions
